# claude-dashboard-custom

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  main.py  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
claude_dashboard/: __init__.py  calculator.py  dashboard.py  models.py  parser.py
docs/: RESEARCH.md
src/: App.tsx  calculator.rs  index.css  main.rs  models.rs  parser.rs  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: calculator.rs  lib.rs  main.rs  models.rs  parser.rs
src/ui/: app.rs
