[package]
name = "claude-dashboard"
version = "0.1.0"
edition = "2021"
description = "Real-time dashboard for Claude Code usage tracking"
authors = ["kiki"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"

# File watching
notify = "7.0"
notify-debouncer-mini = "0.5"

[profile.release]
opt-level = 3
lto = true
strip = true
