[package]
name = "claude-dashboard"
version = "0.7.0"
description = "Claude Code Usage Dashboard"
authors = ["kiki"]
edition = "2021"

[lib]
name = "claude_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "claude-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
